Deploying the CEED website with mkdocs, version 1.0.4 from /home/valeria/.local/lib/python2.7/site-packages/mkdocs (Python 2.7)

--- a/spack/ceed2-theta-packages.yaml
+++ b/spack/ceed2-theta-packages.yaml
@@ -21,6 +21,12 @@
 #
 # This is an example of a packages.yaml file for the Theta machine at ALCF,
 # arch=cray-CNL-mic_knl, using system modules.
+#
+# Note: You have to unload the xalt module on Theta with 
+#
+# module unload xalt
+#
+# otherwise suite-sparse fails to build.
 
 packages:
   cmake:
